fix(landing): fixed image size on mobile

--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -16,6 +16,7 @@
       align-items: center;
 
       img {
+        aspect-ratio: 1;
         width: 100%;
         height: 100%;
         transform: scale(0.8);
